cluster/core/longhorn/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name longhorn
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.${SECRET_DOMAIN}`)
      middlewares:
#        - name: headers@file
        - name: authelia
          namespace: default
      services:
        - name: longhorn-frontend
          port: 80
          namespace: longhorn-system
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
